--- a/css/themes.css
+++ b/css/themes.css
@@ -289,6 +289,10 @@ body.dark-theme .data-card {
     background: #171717;
 }
 
+body.dark-theme .premium-subscribe-card {
+    background: #171717;
+}
+
 body.dark-theme .bio-input {
     background: #171717;
 }
