--- a/css/profile.css
+++ b/css/profile.css
@@ -495,6 +495,7 @@
   /* "Блок статуса премиум подписки" */
   .premium-subscribe-card {
     padding-bottom: 32px;
+    margin-bottom: 12px; /* Добавляет отступ снизу */
   }
 
   .premium-subscribe-card .data-item {
