--- a/css/profile.css
+++ b/css/profile.css
@@ -12,13 +12,12 @@
 /* Главный контейнер блоков профиля */
 .profile-container {
   display: flex;
+  justify-content: center;
   gap: 15px;
   padding: 40px;
   align-items: flex-start;
   max-width: 1000px;
-  /* или больше, в зависимости от ширины контента */
   margin: 0 auto;
-  /* центрирует блок */
   opacity: 0;
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
