--- a/css/referal.css
+++ b/css/referal.css
@@ -4,7 +4,7 @@
     padding: 20px;
 }
 
-.referal-title {
+.referals-title {
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 30px;
@@ -30,7 +30,7 @@
     }
 }
 
-.referals-heading {
+.referals-program-heading {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -38,7 +38,7 @@
     text-align: left;
 }
 
-.referals-description {
+.referals-program-description {
     font-size: 13px;
     color: #777;
     margin-bottom: 25px;
@@ -238,7 +238,7 @@
         margin: 30px auto;
     }
 
-    .referal-title {
+    .referals-title {
         font-size: 22px;
         margin-bottom: 25px;
     }
