Add referal system v8

--- a/css/brand.css
+++ b/css/brand.css
@@ -301,7 +301,7 @@
 
         /* Brand info card */
         .brand-info-card {
-            background-color: #884bc1;
+            background-color: #fff;
             border-radius: 16px;
             padding: 24px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
