--- a/css/themes.css
+++ b/css/themes.css
@@ -46,7 +46,7 @@ body.dark-theme .theme-button:hover {
 /* Card panel background */
 body.dark-theme .theme-card {
   background-color: #171717;
-  border: 1px solid #333333;
+border: 1px solid #333333;
 }
 
 /* Input field, input background */
@@ -379,5 +379,9 @@ body.dark-theme .brand-card-color {
 }
 
 body.dark-theme .brand-partnerinfo-card { 
+    background: #171717;
+}
+
+body.dark-theme .brand-info-card { 
     background: #171717;
 }
