Add referal system v9

--- a/css/brand.css
+++ b/css/brand.css
@@ -310,7 +310,7 @@
             height: 120px;
             box-sizing: border-box;
             margin: 32px auto 18px auto;
-            color: white;
+            color: black;
             text-align: left;
             display: flex;
             align-items: center;
