--- a/css/referal.css
+++ b/css/referal.css
@@ -231,6 +231,73 @@
     }
 }
 
+/* Список приглашенных пользователей*/
+.referals-card-inviteusers-container {
+  max-width: 800px;
+  margin: 30px auto;
+  padding: 20px;
+}
+
+.referals-card-inviteusers {
+  border-radius: 20px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  max-height: 300px;
+  overflow-y: auto;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.invite-user {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 10px 15px;
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.03);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  cursor: pointer;
+}
+
+.invite-user:hover {
+  transform: scale(1.03);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+
+.invite-index {
+  font-weight: bold;
+  color: #666;
+  min-width: 35px;
+  text-align: right;
+}
+
+.invite-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.invite-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.invite-id {
+  font-size: 14px;
+  color: #888;
+}
+
+.invite-username {
+  font-size: 16px;
+  font-weight: 500;
+  color: #333;
+}
+
 /* Мобильная адаптация до 480px */
 @media (max-width: 480px) {
     .referal-container {
@@ -315,7 +382,7 @@
         justify-content: center; /* центрируем карточки */
         gap: 15px;
         margin-top: -15px;
-        margin-bottom: 50px;
+        margin-bottom: -20px;
         padding: 0 16px; /* отступы по бокам, чтобы не липли к краям */
         box-sizing: border-box; /* важно для паддингов */
     }
