--- a/css/referal.css
+++ b/css/referal.css
@@ -17,17 +17,6 @@
     border-radius: 15px;
     padding: 25px 30px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-    opacity: 0;
-    transform: scale(0.97);
-    animation: fadeInScale 0.6s ease forwards;
-    animation-delay: 0.2s;
-}
-
-@keyframes fadeInScale {
-    to {
-        opacity: 1;
-        transform: scale(1);
-    }
 }
 
 .referals-program-heading {
@@ -112,12 +101,7 @@
     border-radius: 15px;
     padding: 25px 30px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-    opacity: 0;
-    transform: scale(0.97);
-    animation: fadeInScale 0.6s ease forwards;
-    animation-delay: 0.2s;
     margin-top: 30px;
-    animation-delay: 0.4s;
 }
 
 .referals-activate-heading {
@@ -225,6 +209,20 @@
 }
 
 /* Анимации*/
+.referals-card,
+.referals-card-activate {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.referals-card.visible,
+.referals-card-activate.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
 .referals-card-info {
   opacity: 0;
   transform: translateY(15px);
