--- a/css/referal.css
+++ b/css/referal.css
@@ -97,6 +97,7 @@
 
 /* Блок с активацией кода */
 .referals-card-activate {
+    display: none;  
     background-color: #ffffff;
     border-radius: 15px;
     padding: 25px 30px;
